febsite flicker issue resolved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -792,3 +792,20 @@ input {
 .other-controller small {
   color: #99c;
 }
+
+.outerDiv {
+    width: 200px;
+    height: 200px;
+    text-align:center;
+    background: yellow;
+    position:relative;
+}
+.innerDiv {
+    width: 100%;
+    height: 100px;
+    background: blue;
+    color:white;
+    text-align:center;
+    position:absolute;
+    bottom:0;
+}
